--- a/templates/base.html
+++ b/templates/base.html
@@ -281,6 +281,10 @@
                                     <li><a class="dropdown-item" href="/manufacturing/fabric-receipt/">
                                         <i class="fas fa-industry"></i> استلام من المصنع
                                     </a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="/manufacturing/production-reports/">
+                                        <i class="fas fa-chart-line"></i> تقارير الإنتاج
+                                    </a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
