--- a/notifications/templates/notifications/detail.html
+++ b/notifications/templates/notifications/detail.html
@@ -187,12 +187,26 @@
                         {% if notification.created_by %}
                         <div class="meta-item">
                             <strong>تم الإنشاء بواسطة:</strong>
-                            <span>{{ notification.created_by.get_full_name|default:notification.created_by.username }}</span>
+                            <span class="badge bg-primary">
+                                <i class="fas fa-user"></i>
+                                {{ notification.created_by.get_full_name|default:notification.created_by.username }}
+                            </span>
                         </div>
-                        {% elif notification.extra_data.changed_by %}
+                        {% elif notification.extra_data.changed_by and notification.extra_data.changed_by != 'مستخدم النظام' %}
                         <div class="meta-item">
                             <strong>تم التغيير بواسطة:</strong>
-                            <span>{{ notification.extra_data.changed_by }}</span>
+                            <span class="badge bg-info">
+                                <i class="fas fa-user"></i>
+                                {{ notification.extra_data.changed_by }}
+                            </span>
+                        </div>
+                        {% else %}
+                        <div class="meta-item">
+                            <strong>تم الإنشاء بواسطة:</strong>
+                            <span class="badge bg-secondary">
+                                <i class="fas fa-robot"></i>
+                                مستخدم النظام
+                            </span>
                         </div>
                         {% endif %}
                     </div>
